--- a/home/static/sass/global.scss
+++ b/home/static/sass/global.scss
@@ -1,9 +1,1 @@
-body {
-  color: white;
-  background-color: black;
-  font-family: helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 100;
-  margin: auto;
-  max-width: 1200px;
-}
+@import 'base';
