--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -1,17 +1,10 @@
+{% extends 'home/base.html' %}
+
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Coming Soon</title>
+{% block mainpage %}
 
-        <!--Stylesheet-->
-        <link rel="stylesheet" href="{% static 'css/global.css' %}">
-    </head>
-<body>
 
-    <h1>Coming Soon</h1>
+    <h1>Coming Soon!</h1>
 
-</body>
-</html>
+{% endblock %}
