--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -4,7 +4,69 @@
 
 {% block mainpage %}
 
+    <section class="feature-image-section">
+        <h1>Accredited Procore partner</h1>
+        <h3>We help you get the most out of Procore</h3>
+        <a class="button button--orange" href="https://www.procore.com/">Visit Procore</a>
+    </section>
 
-    <h1>Coming Soon!</h1>
+    <section class="contact-section">
+        <h2>Request a free consultation today</h2>
+        <a class="button button--orange" href="{% url 'contact' %}">Contact Us</a>
+    </section>
+
+    <section class="content-section">
+        <img class="section-image" src="{% static 'img/tablet-app.jpg' %}"/>
+        <div class="text-block">
+            <h2>About Bauhaus</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
+                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
+                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
+                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
+                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
+                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
+                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
+                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+            </p>
+        </div>
+    </section>
+
+    <section class="content-section">
+        <div class="text-block">
+            <h2>Our Culture</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
+                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
+                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
+                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
+                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
+                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
+                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
+                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+            </p>
+        </div>
+        <img class="section-image" src="{% static 'img/culture.jpg' %}"/>
+    </section>
+
+    <section class="about-me-section">
+        <img class="round-image" src="http://placekitten.com/200/200"/>
+        <div class="text-block text-block--center">
+            <h3>Andrew Shaw, Director</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
+                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
+                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
+                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
+                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
+                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
+                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
+                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+            </p>
+        </div>
+    </section>
+
+
+
 
 {% endblock %}
