--- a/home/static/sass/base.scss
+++ b/home/static/sass/base.scss
@@ -7,14 +7,32 @@ body {
   font-size: 16px;
   font-weight: 100;
   margin: auto;
-  max-width: 1200px;
+}
+
+h1 {
+  font-size: 60px;
+  margin: 20px 0;
+}
+
+h2 {
+  font-size: 44px;
+}
+
+h3 {
+  font-size: 30px;
+  font-weight: 100;
+  margin: 10px 0 30px;
+}
+
+p {
+  font-size: 18px;
+  color: $color-concrete;
 }
 
 .button {
   height: 38px;
   color: $color-white;
   font-size: 20px;
-  margin: 15px;
   padding: 10px 15px;
   text-decoration: none;
   text-align: center;
@@ -29,4 +47,8 @@ body {
   &--orange {
     background-color: $color-orange;
   }
+}
+
+.round-image {
+  border-radius: 50%;
 }
