--- a/home/static/sass/header.scss
+++ b/home/static/sass/header.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 
-$header-height: 130px;
+$header-height: 100px;
 
 .header {
   display: -webkit-flex;
@@ -8,7 +8,7 @@ $header-height: 130px;
   -webkit-justify-content: space-between;
   justify-content: space-between;
 
-  background-color: #262626;
+  background-color: $color-white;
   height: $header-height;
 
   &__logo {
@@ -26,6 +26,6 @@ $header-height: 130px;
     -webkit-justify-content: center;
     justify-content: center;
 
-    padding: 20px;
+    padding: 35px;
   }
 }
