--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -25,6 +25,14 @@
 
     {% block mainpage %}{% endblock %}
 
+    <footer class="footer">
+        <p>
+            Copyright Bauhaus Consultancy </br>
+            <a href="{% url 'contact' %}">Contact us</a>
+        </p>
+        <img src="https://placekitten.com/50/50">
+        <p>Website by <a href="https://www.bonnieappleton.com">Bonnie Appleton</a></p>
+    </footer>
 </body>
 
 </html>
