--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -6,13 +6,13 @@
 
     <section class="feature-image-section">
         <h1>Accredited Procore partner</h1>
-        <h3>We help you get the most out of Procore</h3>
-        <a class="button button--orange" href="https://www.procore.com/">Visit Procore</a>
+        <h3>Request a free consultation today</h3>
+        <a class="button button--orange" href="{% url 'contact' %}">Contact Us</a>
     </section>
 
     <section class="contact-section">
-        <h2>Request a free consultation today</h2>
-        <a class="button button--orange" href="{% url 'contact' %}">Contact Us</a>
+        <h2>We help you get the most out of Procore</h2>
+        <a class="button button--orange" href="https://www.procore.com/">Visit Procore</a>
     </section>
 
     <section class="content-section">
@@ -50,7 +50,7 @@
     </section>
 
     <section class="about-me-section">
-        <img class="round-image" src="http://placekitten.com/200/200"/>
+        <img class="round-image" src="https://placekitten.com/200/200"/>
         <div class="text-block text-block--center">
             <h3>Andrew Shaw, Director</h3>
             <p>
