Contact form rough draft

--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block page_title %}Home{% endblock %}
+
 {% block mainpage %}
 
     <section class="feature-image-section">
@@ -12,7 +14,7 @@
 
     <section class="contact-section">
         <h2>We help you get the most out of Procore</h2>
-        <a class="button button--orange" href="https://www.procore.com/">Visit Procore</a>
+        <a class="button button--orange" href="https://www.procore.com/" target="_blank">Visit Procore</a>
     </section>
 
     <section class="content-section">
