--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -9,6 +9,8 @@
 
     <title>Bauhaus Consultancy | {% block page_title %}{% endblock %}</title>
 
+    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}" />
+
     <link rel="stylesheet" href="{% static 'css/global.css' %}">
 </head>
 
