--- a/home/static/sass/variables.scss
+++ b/home/static/sass/variables.scss
@@ -3,3 +3,5 @@ $color-black: #000000;
 $color-orange: #FF5200;
 $color-grey: #F3F4F6;
 $color-concrete: #555555;
+$color-steel: #898B8E;
+$color-slate: #282828;
