--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -7,20 +7,20 @@
 {% block mainpage %}
 
     <section class="feature-image-section">
-        <h1>Accredited Procore partner</h1>
-        <h3>Request a free consultation today</h3>
-        <a class="button button--orange" href="{% url 'contact' %}">Contact Us</a>
+        <h2>Accredited Procore partner</h2>
+        <h4>Request a free consultation today</h4>
+        <a class="button" href="{% url 'contact' %}">Contact Us</a>
     </section>
 
     <section class="contact-section">
-        <h2>We help you get the most out of Procore</h2>
-        <a class="button button--orange" href="https://www.procore.com/" target="_blank">Visit Procore</a>
+        <h3>We help you get the most out of Procore</h3>
+        <a class="button" href="https://www.procore.com/" target="_blank">Visit Procore</a>
     </section>
 
     <section class="content-section">
         <img class="section-image" src="{% static 'img/tablet-app.jpg' %}"/>
         <div class="text-block">
-            <h2>About Bauhaus</h2>
+            <h3>About Bauhaus</h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
                 Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
@@ -36,7 +36,7 @@
 
     <section class="content-section">
         <div class="text-block">
-            <h2>Our Culture</h2>
+            <h3>Our Culture</h3>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
                 Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
@@ -54,7 +54,7 @@
     <section class="about-me-section">
         <img class="round-image" src="https://placekitten.com/200/200"/>
         <div class="text-block text-block--center">
-            <h3>Andrew Shaw, Director</h3>
+            <h4>Andrew Shaw, Director</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
                 Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
