--- a/home/static/sass/base.scss
+++ b/home/static/sass/base.scss
@@ -3,22 +3,24 @@
 body {
   color: $color-black;
   background-color: $color-grey;
-  font-family: helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 100;
   margin: auto;
+
+
 }
 
-h1 {
+h2 {
   font-size: 60px;
   margin: 20px 0;
 }
 
-h2 {
+h3 {
   font-size: 44px;
 }
 
-h3 {
+h4 {
   font-size: 30px;
   font-weight: 100;
   margin: 10px 0 30px;
@@ -27,6 +29,10 @@ h3 {
 p {
   font-size: 18px;
   color: $color-concrete;
+}
+
+a {
+  text-decoration: none
 }
 
 .button {
@@ -44,8 +50,16 @@ p {
   -webkit-justify-content: center;
   justify-content: center;
 
-  &--orange {
-    background-color: $color-orange;
+  background-color: $color-orange;
+  border: solid $color-orange 2px;
+
+  &--white-border {
+    border-color: $color-white;
+  }
+
+  &:hover {
+    color: $color-orange;
+    background-color: $color-white;
   }
 }
 
