--- a/home/static/sass/footer.scss
+++ b/home/static/sass/footer.scss
@@ -6,7 +6,7 @@ footer {
   -webkit-justify-content: space-between;
   justify-content: space-between;
 
-  background-color: $color-concrete;
+  background-color: $color-slate;
   padding: 15px;
 
   p {
