--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -7,14 +7,14 @@
 {% block mainpage %}
 
     <section class="feature-image-section">
-        <h2>Accredited Procore partner</h2>
-        <h4>Request a free consultation today</h4>
-        <a class="button" href="{% url 'contact' %}">Contact Us</a>
+        <h2>Accredited Procore Partner</h2>
+        <h4>Get a free consultation today</h4>
+        <a class="button" href="{% url 'contact' %}">Request a Demo</a>
     </section>
 
     <section class="contact-section">
         <h3>We help you get the most out of Procore</h3>
-        <a class="button" href="https://www.procore.com/" target="_blank">Visit Procore</a>
+        <a class="button" href="https://www.procore.com/en-gb/platform" target="_blank">Visit Procore</a>
     </section>
 
     <section class="content-section">
@@ -22,14 +22,19 @@
         <div class="text-block">
             <h3>About Bauhaus</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
-                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
-                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
-                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
-                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
-                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
-                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
-                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+                Bauhaus Consultancy is an invaluable resource to help you on your digital transformation journey.
+                Powerful software solutions are an important first step in helping your business maximise on profit,
+                increase productivity and save time.
+                The key to getting the most out of any software suite is training, pre-roll out consultancy and a
+                guiding hand transitioning your processes in to efficient digital workflows.
+            </p>
+            <p>
+                This is where Bauhaus Consultancy comes in. We will work closely with your business and in partnership
+                with Procore to ensure that you absolutely get the most out of your investment, maximising user adoption
+                and best practice to help your business flourish.
+                Bauhaus Consultancy is a fully accredited Procore partner who work closely with Procore to help you get
+                the best out of a fully comprehensive, world class building project management tool.
+
             </p>
         </div>
     </section>
@@ -38,32 +43,26 @@
         <div class="text-block">
             <h3>Our Culture</h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
-                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
-                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
-                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
-                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
-                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
-                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
-                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+                Bauhaus Consultancy believes in people first.
+                We want to get to know and understand our clients as people with real life pressures and needs.
+                We pride ourselves on removing confusing jargon in order to deliver real solutions to real problems
+                that real people are experiencing.
+            </p>
+            <p>
+                If you have a question, ask it and enjoy a straight answer.
             </p>
         </div>
         <img class="section-image" src="{% static 'img/culture.jpg' %}"/>
     </section>
 
     <section class="about-me-section">
-        <img class="round-image" src="https://placekitten.com/200/200"/>
+        <img class="round-image" src="{% static 'img/andrew-shaw.jpg' %}"/>
         <div class="text-block text-block--center">
             <h4>Andrew Shaw, Director</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt posuere convallis.
-                Mauris consequat aliquam erat ac maximus. Quisque placerat aliquam libero, vel elementum diam efficitur
-                vel. Nunc in blandit tellus. Integer placerat justo varius risus feugiat, eu molestie nisi tincidunt.
-                Suspendisse congue blandit nunc, in ultrices purus. Aliquam tincidunt diam vestibulum placerat consequat.
-                Etiam eu tincidunt libero. Suspendisse suscipit condimentum justo non ultricies. Praesent convallis
-                tellus arcu, ornare bibendum leo pulvinar nec. Vivamus commodo, nibh vel scelerisque aliquet, orci lorem
-                malesuada urna, ac pharetra dolor quam sit amet arcu. Nam sed urna tellus. Nam ex urna, eleifend nec
-                nulla ut, molestie laoreet magna. Phasellus vel orci suscipit, dapibus urna quis, suscipit erat.
+                I have over ten years experience in helping companies like yours transition to digital alternatives and truly transforming your business processes.
+                I am passionate about understanding your company’s specific requirements and challenges, using this to guide you through your digital transformation journey as a trusted advisor. I will support and guide you, sometime even challenge you in order to deliver the very best service.
+                With a solid understanding of the construction industry and wealth of knowledge around Procore and its tools, I look forward to collaborating with you on a journey to success.
             </p>
         </div>
     </section>
