--- a/home/static/sass/homepage.scss
+++ b/home/static/sass/homepage.scss
@@ -33,7 +33,7 @@
 
 }
 
-.contact-section {
+.procore-section {
   display: -webkit-flex;
   -webkit-flex-direction: column;
   -webkit-align-items: center;
