--- a/home/templates/home/homepage.html
+++ b/home/templates/home/homepage.html
@@ -12,7 +12,7 @@
         <a class="button" href="{% url 'contact' %}">Request a Demo</a>
     </section>
 
-    <section class="contact-section">
+    <section class="procore-section">
         <h3>We help you get the most out of Procore</h3>
         <a class="button" href="https://www.procore.com/en-gb/platform" target="_blank">Visit Procore</a>
     </section>
