--- a/home/static/sass/base.scss
+++ b/home/static/sass/base.scss
@@ -1,6 +1,16 @@
 @import 'variables';
 
+html, body {
+  height: 100%;
+}
+
 body {
+  display: -webkit-flex ;
+  -webkit-flex-direction: column;
+
+  display: flex;
+  flex-direction: column;
+
   color: $color-black;
   background-color: $color-grey;
   font-family: Helvetica, sans-serif;
@@ -9,6 +19,11 @@ body {
   margin: auto;
 
 
+}
+
+section {
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
 }
 
 h2 {
