--- a/home/static/sass/contact.scss
+++ b/home/static/sass/contact.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+$border-radius: 15px;
+$border-radius-second: $border-radius + 1;
 
 .contact-section {
   display: -webkit-flex;
@@ -19,7 +21,7 @@
   background-size: cover;
   width: 80%;
   margin: 44px;
-
+  border-radius: $border-radius $border-radius-second $border-radius-second $border-radius;
 }
 
 .contact-form {
@@ -34,14 +36,20 @@
   height: 100%;
   background-color: $color-white;
   padding: 40px;
-
+  border-radius: 0 $border-radius $border-radius 0;
 
 
   h2, p {
     text-align: center;
   }
 
+  label {
+    margin-bottom: 5px;
+  }
   input, textarea {
     margin-bottom: 20px;
+    background-color: $color-grey;
+    border: none;
+    padding: 5px;
   }
 }
