Update hover on buttons to use pointer cursor

--- a/home/static/css/global.css
+++ b/home/static/css/global.css
@@ -66,6 +66,7 @@ a {
 .button:hover {
   color: #FF5200;
   background-color: transparent;
+  cursor: pointer;
 }
 .button--white-border {
   border-color: #ffffff;
