--- a/home/static/sass/homepage.scss
+++ b/home/static/sass/homepage.scss
@@ -11,11 +11,15 @@
   align-items: flex-start;
   justify-content: center;
 
-  padding: 10px 20px;
+  padding: 100px 20px 270px 20px;
   height: 530px;
   color: $color-white;
   background: url('../img/procore-app.jpg') no-repeat;
   background-size: cover;
+
+  &__text {
+
+  }
 }
 
 .content-section {
